--- a/devel/py-pygit2/Makefile
+++ b/devel/py-pygit2/Makefile
@@ -1,9 +1,8 @@
 # Created by: William Grzybowski <wg@FreeBSD.org>
-# $FreeBSD: head/devel/py-pygit2/Makefile 458167 2018-01-05 20:02:03Z yuri $
+# $FreeBSD: head/devel/py-pygit2/Makefile 469928 2018-05-14 17:36:43Z mfechner $
 
 PORTNAME=	pygit2
-PORTVERSION=	0.26.0
-PORTREVISION=	1
+PORTVERSION=	0.27.0
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
