--- a/graphics/gegl3/Makefile
+++ b/graphics/gegl3/Makefile
@@ -1,9 +1,8 @@
 # Created by: Pietro Cerutti <gahr@FreeBSD.org>
-# $FreeBSD: head/graphics/gegl3/Makefile 468844 2018-05-02 15:07:27Z jbeich $
+# $FreeBSD: head/graphics/gegl3/Makefile 469931 2018-05-14 17:39:44Z kwm $
 
 PORTNAME=	gegl
-PORTVERSION=	0.3.20
-PORTREVISION=	5
+PORTVERSION=	0.3.34
 CATEGORIES=	graphics
 MASTER_SITES=	GIMP
 PKGNAMESUFFIX=	3
@@ -30,7 +29,7 @@ CONFIGURE_ARGS=	--without-vala --disable-docs
 CONFIGURE_ARGS+=--without-mrg --without-lensfun
 INSTALL_TARGET=	install-strip
 
-GEGL_MINOR=	320
+GEGL_MINOR=	334
 GEGL_VER=	0.3
 PLIST_SUB+=	GEGL_MINOR="${GEGL_MINOR}" GEGL_VER=${GEGL_VER}
 
