--- a/www/rubygem-kubeclient/Makefile
+++ b/www/rubygem-kubeclient/Makefile
@@ -1,7 +1,7 @@
-# $FreeBSD: head/www/rubygem-kubeclient/Makefile 468376 2018-04-26 18:52:14Z sunpoet $
+# $FreeBSD: head/www/rubygem-kubeclient/Makefile 469934 2018-05-14 17:49:50Z mfechner $
 
 PORTNAME=	kubeclient
-PORTVERSION=	2.5.2
+PORTVERSION=	3.0.0
 CATEGORIES=	www rubygems
 MASTER_SITES=	RG
 
@@ -11,9 +11,9 @@ COMMENT=	Client for Kubernetes REST API
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-RUN_DEPENDS=	rubygem-http>=0.9.8:www/rubygem-http \
-		rubygem-recursive-open-struct>=1.0:devel/rubygem-recursive-open-struct \
-		rubygem-rest-client>=0:www/rubygem-rest-client
+RUN_DEPENDS=	rubygem-http>=2.2.2:www/rubygem-http \
+		rubygem-recursive-open-struct10>=1.0.4:devel/rubygem-recursive-open-struct10 \
+		rubygem-rest-client>=2.0:www/rubygem-rest-client
 
 NO_ARCH=	yes
 USE_RUBY=	yes
