--- a/dns/p5-Data-Validate-Domain/Makefile
+++ b/dns/p5-Data-Validate-Domain/Makefile
@@ -2,11 +2,11 @@
 # $FreeBSD$
 
 PORTNAME=	Data-Validate-Domain
-PORTVERSION=	0.10
-PORTREVISION=	1
+PORTVERSION=	0.14
 CATEGORIES=	dns perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:NEELY
+MASTER_SITE_SUBDIR=  CPAN:DROLSKY
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
