--- a/www/p5-Hijk/Makefile
+++ b/www/p5-Hijk/Makefile
@@ -2,10 +2,11 @@
 # $FreeBSD$
 
 PORTNAME=	Hijk
-PORTVERSION=	0.26
+PORTVERSION=	0.27
 CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:AVAR
+MASTER_SITE_SUBDIR=  CPAN:GUGOD
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
