--- a/lang/p5-Promises/Makefile
+++ b/lang/p5-Promises/Makefile
@@ -2,10 +2,11 @@
 # $FreeBSD$
 
 PORTNAME=	Promises
-PORTVERSION=	0.94
+PORTVERSION=	0.99
 CATEGORIES=	lang perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:STEVAN
+MASTER_SITE_SUBDIR=  CPAN:YANICK
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
