--- a/devel/p5-Class-Accessor-Grouped/Makefile
+++ b/devel/p5-Class-Accessor-Grouped/Makefile
@@ -2,11 +2,11 @@
 # $FreeBSD$
 
 PORTNAME=	Class-Accessor-Grouped
-PORTVERSION=	0.10012
-PORTREVISION=	1
+PORTVERSION=	0.10014
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:RIBASUSHI
+MASTER_SITE_SUBDIR=  CPAN:HAARG
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
