--- a/devel/p5-strictures/Makefile
+++ b/devel/p5-strictures/Makefile
@@ -2,11 +2,12 @@
 # $FreeBSD$
 
 PORTNAME=	strictures
-PORTVERSION=	2.000004
+PORTVERSION=	2.000005
 PORTEPOCH=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:HAARG
+MASTER_SITE_SUBDIR=  CPAN:ETHER
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
